--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,20 +34,20 @@
 
     <Button
         android:id="@+id/location"
-        layout_editor_absoluteX="303dp"
+        layout_editor_absoluteX="301dp"
         layout_editor_absoluteY="10dp"
-        android:layout_width="39dp"
-        android:layout_height="51dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/mapbtn"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintBottom_toBottomOf="@+id/logoID"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintLeft_toRightOf="@+id/logoID"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/logoID"
-        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/logoID"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -56,8 +56,8 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         layout_editor_absoluteX="39dp"
         layout_editor_absoluteY="17dp"
-        android:layout_width="49dp"
-        android:layout_height="47dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
@@ -90,19 +90,37 @@
         android:layout_marginBottom="8dp" />
 
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/layout_main_featured_special"
+        layout_editor_absoluteX="8dp"
+        layout_editor_absoluteY="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="153dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"></include>
+
+
+
     <ListView
         android:id="@+id/lvVenue"
         layout_editor_absoluteY="116dp"
-        android:layout_width="match_parent"
-        android:layout_height="475dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="0dp"
+        android:layout_height="340dp"
+        android:layout_marginBottom="0dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintVertical_bias="0.444" />
 
 
 </android.support.constraint.ConstraintLayout>
