--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -33,9 +33,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="22dp"
         android:background="@drawable/mapbtn"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.581"
         app:layout_constraintLeft_toRightOf="@+id/logoID"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,8 +43,7 @@
     <Button
         android:id="@+id/arrowBack"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        layout_editor_absoluteX="28dp"
-        layout_editor_absoluteY="17dp"
+
         android:layout_width="50dp"
         android:layout_height="40dp"
         android:layout_marginEnd="24dp"
@@ -62,8 +61,7 @@
 
     <ImageView
         android:id="@+id/logoID"
-        layout_editor_absoluteX="0dp"
-        layout_editor_absoluteY="-25dp"
+
         android:layout_width="138dp"
         android:layout_height="70dp"
         android:layout_marginLeft="8dp"
@@ -87,7 +85,7 @@
         app:layout_constraintHorizontal_bias="0.433" />
 
     <TextView
-        android:id="@+id/venueID"
+        android:id="@+id/venueName"
         android:layout_width="205dp"
         android:layout_height="50dp"
         android:background="@color/colorAccent"
@@ -106,18 +104,31 @@
 
     <Spinner
         android:id="@+id/dayOfThWeek"
-        android:layout_width="112dp"
-        android:layout_height="42dp"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:background="@color/com_smart_login_code"
+        android:background="@color/btmtoolbar"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/venueID" />
+        app:layout_constraintTop_toBottomOf="@+id/venueName" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/dayOfThWeek"
+        app:layout_constraintRight_toRightOf="@+id/dayOfThWeek"
+        app:layout_constraintTop_toTopOf="@+id/dayOfThWeek"
+        app:srcCompat="@drawable/arrowdown" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -136,9 +147,9 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/phone"
@@ -172,7 +183,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="40dp"
         android:background="@drawable/maps"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/share" />
@@ -183,13 +194,13 @@
         android:layout_height="40dp"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/sharebtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="@+id/btmToolbar" />
 
     <ListView
-        android:id="@+id/lvVenue"
+        android:id="@+id/lvSpecials"
         android:layout_width="385dp"
         android:layout_height="159dp"
         android:layout_marginBottom="0dp"
@@ -202,8 +213,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dayOfThWeek"
         app:layout_constraintVertical_bias="0.52"
-        tools:layout_editor_absoluteY="352dp"
-        tools:layout_editor_absoluteX="3dp" />
+        tools:layout_editor_absoluteX="3dp"
+        tools:layout_editor_absoluteY="352dp" />
 
 
 </android.support.constraint.ConstraintLayout>
