--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -74,62 +74,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="414dp"
-        android:layout_height="142dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:srcCompat="@drawable/bar"
-        app:layout_constraintHorizontal_bias="0.433" />
-
-    <TextView
-        android:id="@+id/venueName"
-        android:layout_width="205dp"
-        android:layout_height="50dp"
-        android:background="@color/colorAccent"
-        android:fontFamily="sans-serif-condensed"
-        android:text="12th Street Bar"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="0dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.818"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-    <Spinner
-        android:id="@+id/dayOfThWeek"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@color/btmtoolbar"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/venueName" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/dayOfThWeek"
-        app:layout_constraintRight_toRightOf="@+id/dayOfThWeek"
-        app:layout_constraintTop_toTopOf="@+id/dayOfThWeek"
-        app:srcCompat="@drawable/arrowdown" />
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -201,20 +145,31 @@
 
     <ListView
         android:id="@+id/lvSpecials"
-        android:layout_width="385dp"
-        android:layout_height="159dp"
+        android:layout_width="379dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btmToolbar"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dayOfThWeek"
-        app:layout_constraintVertical_bias="0.52"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="352dp" />
-
+        tools:layout_editor_absoluteY="311dp"
+        tools:layout_editor_absoluteX="7dp" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/layout_venue_top"
+        android:layout_width="400dp"
+        android:layout_height="229dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/lvSpecials"
+        app:layout_constraintVertical_bias="0.5"></include>
 
 </android.support.constraint.ConstraintLayout>
